# machine_learning

./: .gitignore  Pipfile  pyproject.toml  setup.py
RL/: agent.py  env_wrapper.py  memory.py  model.py  ppo.py  sarsa.py  trajectory.py
RL/Reversi/: memo.ods
RL/Reversi/reversi/: board.py
RL/Reversi/test/: main.py  test_mask.py
RL/TicTacToe/: TicTacToe.py  alphazero_model.pth  logger.py  main.py  ralamb.py  test_MCTS.py  test_alphazero.py  train_alphazero.py  train_muzero.py
RL/TicTacToe/agent/: Agent.py  __init__.py
RL/TicTacToe/agent/AlphaZero/: AlphaZeroAgent.py  __init__.py  alphazero.py  config.py  network.py  replay.py  self_play.py  trainer.py
RL/TicTacToe/agent/MCTS/: MCTSAgent.py  __init__.py
RL/TicTacToe/pretrained/: alphazero_model.pth  alphazero_model_discount.pth
RL/muzero/: agent.py  env_wrapper.py  main.py  mcts.py  network.py  node.py  replay.py  test.py  trainer.py  utils.py
RL/muzero_exp/: game.py
RL/ppo/: agent.py  main.py  model.py  sarsa.py  test.py  trajectory.py  utils.py
cifar-10/: main.py
cifar-10/models/: octave_conv.py  simple_net.py
cifar10/: main.py
cifar10/models/: simple_net.py
cifar100/: README.md  cifar100.ipynb
docs/: pytorch_install.txt
machine_learning/classification/: train_mnist.py
machine_learning/classification/cifar10/: cifar10.ipynb  main.py
machine_learning/classification/mnist/: main.py
machine_learning/nlp/: attention.drawio  data_download.py
machine_learning/nlp/Transformer/: 02_torchtext.ipynb
mnist/: main.py
nlp/: data_download.py
nlp/Transformer/: 01_Tokenizer.ipynb  03_vectorize.ipynb  04_IMDb_DataLoader.ipynb  05_Transformer.ipynb  06_training.ipynb
nlp/Transformer/utils/: transformer.py
src/: model.py  ppo.py  ppo2.py
src/envs/: __init__.py  simple_maze.py
test/: context.py  test_env.py
tests/: context.py  test.py  test_env.py  test_model.py
(+9 files in other folders)
