[tool.poetry]
name = "machine_learning"
version = "0.1.0"
description = ""
authors = ["tsubame-mz <rainy.garden777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.15.4"
absl-py = "^0.9.0"
tqdm = "^4.41.0"
gym-minigrid = "^1.0.0"
matplotlib = "^3.1.2"
torch = "^1.4.0"
tensorboard = "^2.1.0"
ray = {extras = ["debug"], version = "^0.8.1"}
aiohttp = "^3.6.2"
psutil = "^5.7.0"
setproctitle = "^1.1.10"
grpcio = "^1.27.2"
radam = {git = "https://github.com/LiyuanLucasLiu/RAdam.git"}

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
