[tool.poetry]
name = "machine_learning"
version = "0.1.0"
description = ""
authors = ["tsubame-mz <rainy.garden777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.16.0"
absl-py = "^0.9.0"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-win_amd64.whl"}
radam = {git = "https://github.com/LiyuanLucasLiu/RAdam.git"}
gym-tictactoe = {git = "https://github.com/tsubame-mz/gym_tictactoe.git"}
tensorboard = "^2.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
