[tool.poetry]
name = "machine_learning"
version = "0.0.1"
description = ""
authors = ["tsubame-mz <rainy.garden777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^20.8b1"
isort = "^5.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
